--- a/env_setup_tools/fromZeroToSetupSdEnv.ipynb
+++ b/env_setup_tools/fromZeroToSetupSdEnv.ipynb
@@ -143,10 +143,10 @@
         "    # \u5982\u679c\u76ee\u6807\u8def\u5f84\u5df2\u5b58\u5728\uff0c\u5224\u65ad\u5b83\u662f\u5426\u662f\u76ee\u5f55\n",
         "    if os.path.isdir(destination_path):\n",
         "        # \u5982\u679c\u662f\u76ee\u5f55\uff0c\u5219\u4e0d\u6267\u884cgit clone\u547d\u4ee4\n",
-        "        print(\"Destination path already exists and is a directory. Skipping git clone.\")\n",
+        "        print(\"\u76ee\u6807\u8def\u5f84\u5df2\u5b58\u5728\u5e76\u4e14\u662f\u76ee\u5f55\u3002\u8df3\u8fc7git clone\u3002\")\n",
         "    else:\n",
         "        # \u5982\u679c\u4e0d\u662f\u76ee\u5f55\uff0c\u5219\u629b\u51fa\u5f02\u5e38\n",
-        "        raise Exception(\"Destination path already exists and is not a directory.\")\n",
+        "        raise Exception(\"\u76ee\u6807\u8def\u5f84\u5df2\u5b58\u5728\uff0c\u4f46\u4e0d\u662f\u76ee\u5f55\u3002\")\n",
         "else:\n",
         "    # \u5982\u679c\u76ee\u6807\u8def\u5f84\u4e0d\u5b58\u5728\uff0c\u5219\u6267\u884cgit clone\u547d\u4ee4\n",
         "    !cd $parent_dir && git clone $repo_url"
@@ -169,13 +169,13 @@
       },
       "outputs": [],
       "source": [
-        "!source activate && conda env list &&\\\n",
-        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/ &&\\\n",
-        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/ &&\\\n",
-        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/ &&\\\n",
-        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/msys2/ &&\\\n",
-        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/ &&\\\n",
-        "conda config --set show_channel_urls yes"
+        "# !source activate && conda env list &&\\\n",
+        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/ &&\\\n",
+        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/ &&\\\n",
+        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/ &&\\\n",
+        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/msys2/ &&\\\n",
+        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/ &&\\\n",
+        "# conda config --set show_channel_urls yes"
       ]
     },
     {
@@ -200,20 +200,29 @@
         "import subprocess\n",
         "\n",
         "def install_conda_env(env_name):\n",
+        "    # \u68c0\u67e5 conda \u662f\u5426\u5df2\u7ecf\u5b89\u88c5\n",
         "    try:\n",
         "        subprocess.run([\"conda\", \"env\", \"list\"], check=True)\n",
         "    except subprocess.CalledProcessError:\n",
-        "        print(\"Conda is not installed on your system. Please install it first.\")\n",
+        "        print(\"\u7cfb\u7edf\u4e0a\u6ca1\u6709\u5b89\u88c5 Conda\u3002\u8bf7\u5148\u5b89\u88c5\u3002\")\n",
         "        return\n",
         "\n",
-        "    try:\n",
-        "        subprocess.run([\"conda\", \"env\", \"list\", \"--name\", env_name], check=True)\n",
-        "        print(f\"{env_name} environment already exists. Skipping creation.\")\n",
-        "    except subprocess.CalledProcessError:\n",
-        "        subprocess.run([\"source\", \"activate\", \"&&\", \"conda\", \"create\", \"-n\", env_name, \"python=3.10.6\", \"-y\"], check=True)\n",
-        "        print(f\"{env_name} environment created.\")\n",
+        "    # \u68c0\u67e5\u73af\u5883\u662f\u5426\u5df2\u7ecf\u5b58\u5728\n",
+        "    env_exists = False\n",
+        "    output = subprocess.run([\"conda\", \"env\", \"list\"], capture_output=True).stdout.decode()\n",
+        "    for line in output.split(\"\\n\"):\n",
+        "        if env_name in line:\n",
+        "            env_exists = True\n",
+        "            break\n",
         "\n",
-        "install_conda_env(\"py3.10.6\")"
+        "    # \u5982\u679c\u73af\u5883\u4e0d\u5b58\u5728\uff0c\u5219\u521b\u5efa\u65b0\u73af\u5883\n",
+        "    if env_exists:\n",
+        "        print(f\"\u73af\u5883 {env_name} \u5df2\u7ecf\u5b58\u5728\uff0c\u8df3\u8fc7\u521b\u5efa\u3002\")\n",
+        "    else:\n",
+        "        subprocess.run([\"conda\", \"create\", \"-n\", env_name, \"python=3.10.6\", \"-y\"], check=True)\n",
+        "        print(f\"\u5df2\u521b\u5efa\u73af\u5883 {env_name}\u3002\")\n",
+        "\n",
+        "install_conda_env(\"py3.10.6\")\n"
       ]
     },
     {
@@ -285,8 +294,8 @@
         "conda activate py3.10.6 &&\\\n",
         "pip install pip -U &&\\\n",
         "pip config set global.index-url \"\" &&\\\n",
-        "conda install -y tensorflow=2.10.0 cudatoolkit=11.3 &&\\\n",
-        "pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu113\n",
+        "conda install -y tensorflow=2.10.0 cudatoolkit=11.7 &&\\\n",
+        "pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu117\n",
         "# conda install pytorch==1.12.1 torchvision==0.13.1 -c pytorch -c nvidia -y\n",
         "# conda install pytorch torchvision pytorch-cuda=11.3 -c pytorch -c nvidia"
       ]
