organize file directory

--- a/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
@@ -505,7 +505,15 @@
       "outputs": [],
       "source": [
         "import os,sys\n",
-        "sys.path.append('../') # \u628a\u4e0a\u7ea7\u8def\u5f84\u4e5f\u52a0\u5165\u5230\u7cfb\u7edf\u8def\u5f84\u4e2d\uff0c\u8fd9\u6837\u5c31\u80fd\u591f\u627e\u5230func\n",
+        "# \u8c03\u7528\u547d\u4ee4\u884c\u5de5\u5177git rev-parse\uff0c\u83b7\u53d6git\u9879\u76ee\u7684\u6839\u76ee\u5f55\uff0c\u8fd9\u6837\u65e0\u8bbaipynb\u653e\u5728\u54ea\u4e2a\u4f4d\u7f6e\uff0c\u5b83\u90fd\u80fd\u627e\u5230\u6839\u76ee\u5f55\u4e2d\u7684func\n",
+        "git_root = subprocess.run(\n",
+        "    [\"git\", \"rev-parse\", \"--show-toplevel\"],\n",
+        "    capture_output=True,\n",
+        "    text=True,\n",
+        ").stdout.strip()\n",
+        "# \u628a\u4e0a\u7ea7\u8def\u5f84\u4e5f\u52a0\u5165\u5230\u7cfb\u7edf\u8def\u5f84\u4e2d\uff0c\u8fd9\u6837\u5c31\u80fd\u591f\u627e\u5230func\n",
+        "sys.path.append(git_root) \n",
+        "\n",
         "from func.xformers import installXformers\n",
         "from func.env import setProxy\n",
         "from IPython.display import clear_output\n",
@@ -682,222 +690,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!cp /input1/FuXingHao768.ckpt /output/stable-diffusion-webui/models/Stable-diffusion/FuXingHao768.ckpt"
+        "# !cp /input1/FuXingHao768.ckpt /output/stable-diffusion-webui/models/Stable-diffusion/FuXingHao768.ckpt"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "40094cba-29c1-4c0b-b3dc-f20b57bf9eae",
-      "metadata": {},
-      "source": [
-        "# <i class=\"fa fa-rocket\"></i> \u8fd0\u884cSD_WebUI\u7a0b\u5e8f"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "0413b368-a779-417e-9a2a-0dd19909ae5b",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "root_dir = os.path.abspath(os.sep)\n",
-        "for root, dirs, files in os.walk(root_dir):\n",
-        "    for file in files:\n",
-        "        if file.endswith('.sh') and file == 'webui.sh':\n",
-        "            file_path = os.path.join(root, file)\n",
-        "            try:\n",
-        "                !sh $file_path\n",
-        "            except FileNotFoundError:\n",
-        "                print(f'')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ea5a257a-516b-4466-86d3-e1b314a5a773",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "\n",
-        "# \u67e5\u8be2\u672c\u673a conda \u5b89\u88c5\u7684\u76ee\u5f55\n",
-        "conda_dir = os.popen(\"conda info --base\").read().strip()\n",
-        "print(f\"\u5f53\u524d conda \u5b89\u88c5\u7684\u76ee\u5f55\uff1a{conda_dir}\")\n",
-        "\n",
-        "# \u5907\u4efd\u5f53\u524d\u7684 conda \u5b89\u88c5\n",
-        "backup_dir = conda_dir + \"_backup\"\n",
-        "print(f\"\u628a\u5f53\u524d conda \u5907\u4efd\u5230 {backup_dir}\")\n",
-        "os.system(f\"mv {conda_dir} {backup_dir}\")\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ba33349f-6858-4542-b650-307293ad5515",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "# \u521b\u5efa\u6307\u5411\u65b0 conda \u5b89\u88c5\u7684\u8f6f\u94fe\u63a5\n",
-        "new_conda_dir = \"/output/miniconda3\"\n",
-        "print(f\"\u5c06 {new_conda_dir} \u94fe\u63a5\u5230 {conda_dir}\")\n",
-        "os.system(f\"ln -s {new_conda_dir} {conda_dir}\")\n",
-        "\n",
-        "print(\"\u5b8c\u6210\uff01\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "620c6e42-8bde-4bab-899b-ced66252e611",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!rm -rf $conda_dir"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6ef72e80-7893-41cb-9384-3f1ee8e4795f",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!cd /output/miniconda3 && ls"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "bdc38394-e4fe-4361-a1a0-d3559d572875",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "!cd /usr/local/ && ls"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "4cc8d8d0-6403-4b30-bc10-76f36d444d19",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!ln -s /output/miniconda3 /usr/local"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "09c3ae51-d91c-40fc-87ac-68a039830f5e",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!/output/miniconda3/condabin/conda"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ab416a17-9bc6-45be-b3e3-19dc6be1f9bd",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!du -sh /output/miniconda3"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "97964c58-d1f7-4a00-9412-57d5fbae97fa",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!conda config --set envs_dirs /output/miniconda3/condabin/conda"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6999f5fc-0bdd-4058-af44-8ba8fb95bc04",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "!conda config --get envs_dirs"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "55d276f4-8bbb-4abc-ac9b-a7f6e9eb7b6f",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!ln -s /output/miniconda3/envs/py3.10.6 /usr/local/envs/py3.10.6"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "33c118d6-b839-4ccc-9393-2112cb9c4299",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "!ln -s /output/miniconda3/lib /usr/local/"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "7cec85cd-8cf3-4e85-8997-7f8e63a03f64",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!ln -s /output/miniconda3/x86_64-conda-linux-gnu /usr/local/"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "14a2982a-1d01-4dca-a5ee-b17dc0aeb20f",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "!rm -rf /usr/local/x86_64-conda-linux-gnu"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ee3e7686-0612-4251-8047-be4a84aafdbf",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!rm -rf /usr/local/envs/py3.10.6"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9e54545b-25d9-4991-b73b-575ed4184bf4",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
