--- a/tools/model_convert_tools/convertodiffv2.ipynb
+++ b/tools/model_convert_tools/convertodiffv2.ipynb
@@ -202,7 +202,7 @@
       "outputs": [],
       "source": [
         "WEIGHT_DIR='/output/stable-diffusion-custom'\n",
-        "CKPT_DIR='/output/v2-1_768.ckpt'\n",
+        "CKPT_DIR='/output/v2-1_768-nonema-pruned.ckpt'\n",
         "\n",
         "import time\n",
         "from datetime import timedelta\n",
@@ -223,14 +223,6 @@
         "\n",
         "!du -sh $WEIGHT_DIR"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "27b70884-62d9-4c99-971c-f5f755feb513",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
