conda use tsinghua channels

--- a/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
@@ -169,13 +169,13 @@
       },
       "outputs": [],
       "source": [
-        "# !source activate && conda env list &&\\\n",
-        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/ &&\\\n",
-        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/ &&\\\n",
-        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/ &&\\\n",
-        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/msys2/ &&\\\n",
-        "# conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/ &&\\\n",
-        "# conda config --set show_channel_urls yes"
+        "!source activate && conda env list &&\\\n",
+        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/ &&\\\n",
+        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/ &&\\\n",
+        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/ &&\\\n",
+        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/msys2/ &&\\\n",
+        "conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/ &&\\\n",
+        "conda config --set show_channel_urls yes"
       ]
     },
     {
