--- a/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
@@ -26,7 +26,7 @@
         "tools_to_install = [\n",
         "\n",
         "    \"iputils-ping\",\n",
-        "    \n",
+        "    \"locate\"\n",
         "]\n",
         "\n",
         "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
@@ -294,6 +294,7 @@
         "conda activate py3.10.6 &&\\\n",
         "pip install pip -U &&\\\n",
         "pip config set global.index-url \"\" &&\\\n",
+        "conda install -c conda-forge gcc=12.1.0 &&\\\n",
         "conda install -y tensorflow=2.10.0 cudatoolkit=11.7 &&\\\n",
         "pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu117\n",
         "# conda install pytorch==1.12.1 torchvision==0.13.1 -c pytorch -c nvidia -y\n",
@@ -331,12 +332,14 @@
         "target_dir = \"/usr/lib/x86_64-linux-gnu/\"\n",
         "\n",
         "# \u8bbe\u7f6e\u6e90\u6587\u4ef6\u8def\u5f84\n",
-        "source_file = os.path.join(env_dir, 'lib', 'libstdc++.so.6.0.30')\n",
+        "source_file = os.path.join(env_dir,'lib', 'libstdc++.so.6.0.30')\n",
+        "print('source_file',source_file)\n",
         "\n",
         "# \u8bbe\u7f6e\u76ee\u6807\u6587\u4ef6\u8def\u5f84\n",
         "target_file = os.path.join(target_dir, 'libstdc++.so.6.0.30')\n",
+        "print('target_file',target_file)\n",
         "\n",
-        "cmd=f\"cp {source_file} {target_dir} && cd {target_dir} && rm libstdc++.so.6 && ln {target_file} libstdc++.so.6\"\n",
+        "cmd=f\"cp {source_file} {target_dir} && cd {target_dir} && rm libstdc++.so.6 && ln libstdc++.so.6.0.30 libstdc++.so.6\"\n",
         "print(cmd)\n",
         "\n",
         "# \u6267\u884c\u547d\u4ee4\u884c\n",
