--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -416,6 +416,7 @@
         "        'python launch.py',\n",
         "        '--share',\n",
         "        '--opt-split-attention',\n",
+        "        '--port 6006',\n",
         "        '--deepdanbooru',\n",
         "        '--administrator',\n",
         "        '--disable-safe-unpickle'\n",
