--- a/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv.ipynb
@@ -294,7 +294,7 @@
         "conda activate py3.10.6 &&\\\n",
         "pip install pip -U &&\\\n",
         "pip config set global.index-url \"\" &&\\\n",
-        "conda install -c conda-forge gcc=12.1.0 &&\\\n",
+        "conda install -c conda-forge gcc=12.1.0 -y &&\\\n",
         "conda install -y tensorflow=2.10.0 cudatoolkit=11.7 &&\\\n",
         "pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu117\n",
         "# conda install pytorch==1.12.1 torchvision==0.13.1 -c pytorch -c nvidia -y\n",
@@ -690,7 +690,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "cc28da8a-1734-4bea-9be4-ccd1342bb426",
-      "metadata": {},
+      "metadata": {
+        "tags": []
+      },
       "outputs": [],
       "source": [
         "# !cp /input1/FuXingHao768.ckpt /output/stable-diffusion-webui/models/Stable-diffusion/FuXingHao768.ckpt"
