detect input0~4 and transfer ckpt to diffusers

--- a/tools/model_convert_tools/convertodiffv2.ipynb
+++ b/tools/model_convert_tools/convertodiffv2.ipynb
@@ -33,7 +33,6 @@
         "]\n",
         "\n",
         "tools_to_install = [\n",
-        "    # \"tree\"\n",
         "    \"iputils-ping\"\n",
         "]\n",
         "\n",
@@ -111,7 +110,7 @@
         "    print('diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002')\n",
         "  \n",
         "!pip install --user $content_folder/diffusers\n",
-        "print('\u001b[1;32mDONE !')"
+        "print('\u001b[1;32m\u5df2\u6210\u529f\u5b89\u88c5Diffusers!\\033[0m')"
       ]
     },
     {
@@ -160,28 +159,67 @@
       },
       "outputs": [],
       "source": [
-        "prc=\"--fp16\"\n",
-        "WEIGHT_DIR='/input0'\n",
-        "CKPT_DIR='/output/v2-1_768-nonema-pruned.ckpt'\n",
+        "# prc=\"--fp16\"\n",
+        "# WEIGHT_DIR='/input0'\n",
+        "# CKPT_DIR='/output/v2-1_768-nonema-pruned.ckpt'\n",
         "\n",
-        "import time\n",
-        "from datetime import timedelta\n",
+        "# import time\n",
+        "# from datetime import timedelta\n",
         "\n",
-        "# \u811a\u672c\u5f00\u59cb\u6267\u884c\u7684\u65f6\u95f4\n",
-        "start_time = time.time()\n",
+        "# # \u811a\u672c\u5f00\u59cb\u6267\u884c\u7684\u65f6\u95f4\n",
+        "# start_time = time.time()\n",
         "\n",
-        "# \u8fd9\u91cc\u662f\u4f60\u7684\u811a\u672c\u4ee3\u7801\n",
-        "!python ./temp/convertosdv2.py $prc $WEIGHT_DIR $CKPT_DIR\n",
+        "# # \u8fd9\u91cc\u662f\u4f60\u7684\u811a\u672c\u4ee3\u7801\n",
+        "# !python ./temp/convertosdv2.py $prc $WEIGHT_DIR $CKPT_DIR\n",
         "\n",
-        "# \u811a\u672c\u6267\u884c\u5b8c\u6210\u7684\u65f6\u95f4\n",
-        "end_time = time.time()\n",
-        "# \u811a\u672c\u6267\u884c\u7684\u603b\u8017\u65f6\n",
-        "elapsed_time = end_time - start_time\n",
-        "# \u5c06\u811a\u672c\u6267\u884c\u7684\u603b\u8017\u65f6\u8f6c\u6362\u4e3a\u65f6\u5206\u79d2\u7684\u8868\u793a\u5f62\u5f0f\n",
-        "elapsed_time_str = str(timedelta(seconds=elapsed_time))\n",
-        "print(\"\u8f6c\u5316\u603b\u8017\u65f6\uff1a\", elapsed_time_str)\n",
+        "# # \u811a\u672c\u6267\u884c\u5b8c\u6210\u7684\u65f6\u95f4\n",
+        "# end_time = time.time()\n",
+        "# # \u811a\u672c\u6267\u884c\u7684\u603b\u8017\u65f6\n",
+        "# elapsed_time = end_time - start_time\n",
+        "# # \u5c06\u811a\u672c\u6267\u884c\u7684\u603b\u8017\u65f6\u8f6c\u6362\u4e3a\u65f6\u5206\u79d2\u7684\u8868\u793a\u5f62\u5f0f\n",
+        "# elapsed_time_str = str(timedelta(seconds=elapsed_time))\n",
+        "# print(\"\u8f6c\u5316\u603b\u8017\u65f6\uff1a\", elapsed_time_str)\n",
         "\n",
-        "!du -sh $CKPT_DIR"
+        "# !du -sh $CKPT_DIR"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "16d472e8-589a-4c00-af05-c6eca4d4cec1",
+      "metadata": {},
+      "source": [
+        "# \u67e5\u627einput\u76ee\u5f55\u4e0b\u7684ckpt\u6587\u4ef6"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "06b116eb-1909-42eb-b343-c197bc37e75e",
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "def find_ckpt_file(root_dir):\n",
+        "    # \u904d\u5386 root_dir \u76ee\u5f55\u4e0b\u7684\u5404\u4e2a\u6587\u4ef6\n",
+        "    for root, dirs, files in os.walk(root_dir):\n",
+        "        # \u904d\u5386\u6587\u4ef6\u5217\u8868\n",
+        "        for file in files:\n",
+        "            # \u5982\u679c\u6587\u4ef6\u540d\u79f0\u662f v2-1_768-nonema-pruned.ckpt\uff0c\u5219\u8fd4\u56de\u6587\u4ef6\u7684\u5b8c\u6574\u8def\u5f84\n",
+        "            if file == \"v2-1_768-nonema-pruned.ckpt\":\n",
+        "                return os.path.join(root, file)\n",
+        "    # \u5982\u679c\u5728 root_dir \u76ee\u5f55\u4e0b\u627e\u4e0d\u5230 v2-1_768-nonema-pruned.ckpt \u6587\u4ef6\uff0c\u5219\u8fd4\u56de None\n",
+        "    return None\n",
+        "\n",
+        "# \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
+        "for i in range(5):\n",
+        "    ckpt_file_dir = find_ckpt_file(\"/input{}\".format(i))\n",
+        "    if ckpt_file_dir:\n",
+        "        # \u5982\u679c\u627e\u5230\u4e86 v2-1_768-nonema-pruned.ckpt \u6587\u4ef6\uff0c\u5219\u8f93\u51fa\u6587\u4ef6\u7684\u5b8c\u6574\u8def\u5f84\n",
+        "        print(f'\u627e\u5230ckpt\u6587\u4ef6\uff0c\u8be6\u7ec6\u8def\u5f84\u4e3a\uff1a{ckpt_file_dir}')\n",
+        "        break"
       ]
     },
     {
@@ -201,8 +239,8 @@
       },
       "outputs": [],
       "source": [
-        "WEIGHT_DIR='/output/stable-diffusion-custom'\n",
-        "CKPT_DIR='/output/v2-1_768-nonema-pruned.ckpt'\n",
+        "WEIGHT_DIR='/output/content/stable-diffusion-v2-768'\n",
+        "CKPT_DIR=ckpt_file_dir\n",
         "\n",
         "import time\n",
         "from datetime import timedelta\n",
