--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -27,7 +27,9 @@
         "    \"bitsandbytes\",\n",
         "    \"jax\",\n",
         "    \"xformers\",\n",
-        "    \"triton==2.0.0.dev20221120\"\n",
+        "    \"triton==2.0.0.dev20221120\",\n",
+        "    \"xxhash\",\n",
+        "    \"mmh3\"\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -255,10 +257,115 @@
     },
     {
       "cell_type": "markdown",
+      "id": "dcc0437a-0a10-4e76-9198-32a12c7a97d8",
+      "metadata": {},
+      "source": [
+        "# \u5b9a\u4e49\u4e00\u4e2a\u6821\u9a8c\u548c\u751f\u6210\u51fd\u6570\uff0c\u901a\u8fc7xxhash\u751f\u6210\u5bf9\u5e94\u6587\u4ef6\u5939\u6821\u9a8c\u7801\uff0c\u7528\u4e8e\u4e4b\u540e\u67e5\u627e\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d432177d-a351-4e3f-9cae-106e2cbec45d",
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import xxhash\n",
+        "import time\n",
+        "\n",
+        "def generate_checksum(folder_path,print_elapsed_time=False):\n",
+        "    # \u5f00\u59cb\u8ba1\u65f6\n",
+        "    start_time = time.time()\n",
+        "    # \u521b\u5efa xxhash \u5bf9\u8c61\n",
+        "    checksum = xxhash.xxh64()\n",
+        "    # \u904d\u5386\u6587\u4ef6\u5939\n",
+        "    for root, dirs, files in os.walk(folder_path):\n",
+        "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u5b50\u6587\u4ef6\u5939\n",
+        "        for folder in dirs:\n",
+        "            # \u83b7\u53d6\u6587\u4ef6\u5939\u8def\u5f84\n",
+        "            folder_path = os.path.join(root, folder).encode('utf-8')\n",
+        "            # \u66f4\u65b0\u54c8\u5e0c\u503c\n",
+        "            checksum.update(folder_path)\n",
+        "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u6587\u4ef6\n",
+        "        for file in files:\n",
+        "            # \u83b7\u53d6\u6587\u4ef6\u8def\u5f84\n",
+        "            file_path = os.path.join(root, file)\n",
+        "            # \u6253\u5f00\u6587\u4ef6\n",
+        "            with open(file_path, 'rb') as f:\n",
+        "                # \u8bfb\u53d6\u6587\u4ef6\u5757\n",
+        "                while True:\n",
+        "                    block = f.read(4096)\n",
+        "                    if not block:\n",
+        "                        break\n",
+        "                    # \u66f4\u65b0\u54c8\u5e0c\u503c\n",
+        "                    checksum.update(block)\n",
+        "    # \u7ed3\u675f\u8ba1\u65f6\n",
+        "    elapsed_time = time.time() - start_time\n",
+        "    # \u8f93\u51fa\u6240\u7528\u65f6\u95f4\n",
+        "    if print_elapsed_time:\n",
+        "        print(f'\u751f\u6210\u6821\u9a8c\u7801\u8017\u65f6: {elapsed_time:.2f} \u79d2')\n",
+        "    # \u8fd4\u56de\u5341\u516d\u8fdb\u5236\u54c8\u5e0c\u503c\n",
+        "    return checksum.hexdigest()\n",
+        "\n",
+        "# \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 8765e1bd86085ab0\n",
+        "\n",
+        "# # \u8bbe\u7f6e\u8981\u751f\u6210\u6821\u9a8c\u7801\u7684\u6587\u4ef6\u5939\u8def\u5f84\n",
+        "# targetFolder='/output/content/stable-diffusion-v2-768'\n",
+        "\n",
+        "# # \u8c03\u7528 generate_checksum \u51fd\u6570\u751f\u6210\u6821\u9a8c\u7801\n",
+        "# code = generate_checksum(\n",
+        "#     folder_path=targetFolder,\n",
+        "#     print_elapsed_time=True\n",
+        "# )\n",
+        "\n",
+        "# # \u8f93\u51fa\u6821\u9a8c\u7801\n",
+        "# print(code)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "67c1f76a-cf87-4eba-9dec-952cf9154a6f",
+      "metadata": {},
+      "source": [
+        "# \u5b9a\u4e49find_folder\u51fd\u6570\uff0c\u4ee5\u4fbf\u540e\u7eed\u901a\u8fc7\u6821\u9a8c\u548c\u627e\u56de\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e72f4761-311f-4a87-b59e-6940459451b9",
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "import time\n",
+        "\n",
+        "def find_folder(root_folder, checksum):\n",
+        "    start_time = time.time()\n",
+        "    for root, dirs, files in os.walk(root_folder):\n",
+        "        for folder in dirs:\n",
+        "            folder_path = os.path.join(root, folder)\n",
+        "            folder_checksum = generate_checksum(folder_path)\n",
+        "            if folder_checksum == checksum:\n",
+        "                elapsed_time = time.time() - start_time\n",
+        "                print(f'\\033[32m\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
+        "                print(f'\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{folder_path}')\n",
+        "                return folder_path\n",
+        "    elapsed_time = time.time() - start_time\n",
+        "    print(f'\\033[31m\u672a\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
+        "    return None"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "8ab23d58-33f8-428b-885a-740386e4713c",
       "metadata": {},
       "source": [
-        "# \u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08\u8f6f\u94fe\u63a5\uff09"
+        "# \u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08Symbol Link \u8f6f\u8fde\u63a5\uff09"
       ]
     },
     {
@@ -302,13 +409,26 @@
         "\n",
         "if env_name==\"OpenBayes\":\n",
         "\n",
-        "    # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
-        "    create_symlink(\n",
-        "        source_path='/input0', # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
-        "        symlink_path='/output/content', # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
-        "        symlink_name='stable-diffusion-v2-768' # \u6a21\u578b\u540d\u79f0\n",
-        "    )\n",
-        "\n",
+        "    def check_model_and_make_symbollink():\n",
+        "        stable_diffusion_v2_dir=find_folder('/output/','8765e1bd86085ab0') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        # print(stable_diffusion_v2_dir)\n",
+        "        if stable_diffusion_v2_dir:\n",
+        "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
+        "                print('stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "            else:\n",
+        "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
+        "                create_symlink(\n",
+        "                    source_path=stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                    symlink_path='/output/content', # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                    symlink_name='stable-diffusion-v2-768' # \u6a21\u578b\u540d\u79f0\n",
+        "                )\n",
+        "        else:\n",
+        "            print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
+        "            %run ../tools/model_convert_tools/convertodiffv2.ipynb\n",
+        "            check_model_and_make_symbollink()\n",
+        "    \n",
+        "    check_model_and_make_symbollink()\n",
+        "    \n",
         "    # # \u514d\u5b89\u88c5\uff08\u6302\u8f7d\u6570\u636e\u96c6\uff09DreamBooth\u6240\u9700\u4f9d\u8d56\uff08\u80fd\u591f\u7701\u6389fast-DreamBooth\u4e2d\u7684\u7b2c\u4e00\u4e2a\u73af\u8282\uff09\n",
         "    # !rm -rf /usr/local/lib/python3.8/dist-packages\n",
         "    # create_symlink(\n",
