--- a/dreambooth/clip/clipForOpenbayes.ipynb
+++ b/dreambooth/clip/clipForOpenbayes.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "fb940233-7a78-4aa7-b234-6697214da42d",
-      "metadata": {},
+      "metadata": {
+        "tags": []
+      },
       "outputs": [],
       "source": [
         "import sys\n",
@@ -22,29 +24,78 @@
         "import subprocess\n",
         "\n",
         "# \u68c0\u67e5 accelerate \u5e93\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\n",
+        "libraries_to_install = [\n",
+        "    \"accelerate==0.12.0\",\n",
+        "]\n",
+        "\n",
+        "tools_to_install = [\n",
+        "    \n",
+        "]\n",
+        "\n",
         "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
-        "accelerate_installed = False\n",
-        "for library in installed_libraries:\n",
-        "    if library.startswith(\"accelerate==0.12.0\"):\n",
-        "        accelerate_installed = True\n",
-        "        break\n",
+        "\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
+        "for library in libraries_to_install:\n",
+        "    if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        continue\n",
+        "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
+        "        !pip install $library\n",
+        "    else:\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        \n",
-        "# \u5982\u679c\u5c1a\u672a\u5b89\u88c5 accelerate \u5e93\uff0c\u5219\u5b89\u88c5\u5b83\n",
-        "if not accelerate_installed:\n",
-        "    !pip install accelerate==0.12.0\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "update_needed = False\n",
+        "for tool in tools_to_install:\n",
+        "    exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "    if exit_code != 0:\n",
+        "        update_needed = True\n",
+        "        break\n",
+        "    else:\n",
+        "        print(f\"\u3010 {tool} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "if update_needed:\n",
+        "    !apt-get update\n",
+        "    for tool in tools_to_install:\n",
+        "        exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "        if exit_code != 0:\n",
+        "            !apt-get install -y $tool\n",
         "\n",
-        "%cd /openbayes/home/content/   \n",
-        "\n",
-        "# \u68c0\u67e5 Dependencies.7z.001 \u6587\u4ef6\u662f\u5426\u5df2\u7ecf\u5b58\u5728\n",
-        "dependencies_exist = os.path.exists(\"/openbayes/home/content/Dependencies.7z.001\")\n",
-        "\n",
-        "# \u5982\u679c\u6587\u4ef6\u4e0d\u5b58\u5728\uff0c\u5219\u4e0b\u8f7d\u5e76\u89e3\u538b\u6587\u4ef6\n",
-        "if not dependencies_exist:\n",
+        "    \n",
+        "# \u5b9a\u4e49\u4e0b\u8f7d\u548c\u89e3\u538b\u4f9d\u8d56\u51fd\u6570\n",
+        "def download_and_unzip_dependencies():\n",
+        "    %cd /openbayes/home/content/\n",
         "    for i in range(1,6):\n",
-        "        !$proxy && wget \"https://github.com/TheLastBen/fast-stable-diffusion/raw/main/Dependencies/Dependencies.{i}\"\n",
-        "        !mv \"Dependencies.{i}\" \"Dependencies.7z.00{i}\"\n",
-        "    !7z x -y Dependencies.7z.001\n",
+        "        if not os.path.exists(f\"/openbayes/home/content/Dependencies.7z.00{i}\"):\n",
+        "            !$proxy && wget \"https://github.com/TheLastBen/fast-stable-diffusion/raw/main/Dependencies/Dependencies.{i}\"\n",
+        "            !mv \"Dependencies.{i}\" \"Dependencies.7z.00{i}\"\n",
+        "    print('Dependencies\u76847z\u90fd\u5df2\u7ecf\u5728\u672c\u5730\u4e86\uff0c\u65e0\u9700\u4e0b\u8f7d')\n",
         "\n",
+        "    # \u68c0\u67e5 7z \u662f\u5426\u5df2\u7ecf\u89e3\u538b\n",
+        "    unzip_result_exist = os.path.exists(\"/openbayes/home/content/usr/local/lib/python3.8/dist-packages\")\n",
+        "    if not unzip_result_exist:\n",
+        "        # \u5bf97z\u6587\u4ef6\u8fdb\u884c\u89e3\u538b\n",
+        "        try:\n",
+        "            result = subprocess.run(['7z', 'x', '-y', 'Dependencies.7z.001'], stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+        "            if result.returncode == 0:\n",
+        "                print('\u547d\u4ee4\u6267\u884c\u6210\u529f')\n",
+        "            else:\n",
+        "                print('\u547d\u4ee4\u6267\u884c\u5931\u8d25:', result.stderr)\n",
+        "                print('\u6b63\u51c6\u5907\u91cd\u65b0\u4e0b\u8f7d')\n",
+        "                # \u5220\u9664\n",
+        "                for i in range(1,6):\n",
+        "                    filename=f\"Dependencies.7z.00{i}\"\n",
+        "                    !rm -rf $filename\n",
+        "                # \u91cd\u65b0\u4e0b\u8f7d\n",
+        "                download_and_unzip_dependencies()\n",
+        "        except Exception as e:\n",
+        "            print('\u547d\u4ee4\u6267\u884c\u5931\u8d25:', e)\n",
+        "\n",
+        "    else:\n",
+        "        print('7z\u5df2\u7ecf\u89e3\u538b')\n",
+        "        \n",
+        "# \u6267\u884c\u4e0b\u8f7d\u548c\u89e3\u538b\u4f9d\u8d56\n",
+        "download_and_unzip_dependencies()\n",
+        "        \n",
         "# \u68c0\u67e5 /usr/local/lib/python3.8/dist-packages \u76ee\u5f55\u662f\u5426\u5df2\u7ecf\u5b58\u5728\n",
         "dist_packages_exist = os.path.exists(\"/usr/local/lib/python3.8/dist-packages\")\n",
         "\n",
@@ -73,6 +124,14 @@
         "\n",
         "print('\u001b[1;32mDONE !')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "009fb603-36d6-427d-85cd-eb05cd590606",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
