--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -29,7 +29,6 @@
         "    \"xformers\",\n",
         "    \"triton==2.0.0.dev20221120\",\n",
         "    \"xxhash\",\n",
-        "    \"mmh3\"\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -260,7 +259,7 @@
       "id": "dcc0437a-0a10-4e76-9198-32a12c7a97d8",
       "metadata": {},
       "source": [
-        "# \u5b9a\u4e49\u4e00\u4e2a\u6821\u9a8c\u548c\u751f\u6210\u51fd\u6570\uff0c\u901a\u8fc7xxhash\u751f\u6210\u5bf9\u5e94\u6587\u4ef6\u5939\u6821\u9a8c\u7801\uff0c\u7528\u4e8e\u4e4b\u540e\u67e5\u627e\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
+        "# \u5b9a\u4e49\u4e00\u4e2a\u6821\u9a8c\u548c\u751f\u6210\u51fd\u6570\uff0c\u901a\u8fc7xxhash\u751f\u6210\u5bf9\u5e94\u6587\u4ef6\u5939\u6821\u9a8c\u548c\uff08\u4f9d\u636e\u662f\u76ee\u5f55\u7ed3\u6784\u548c\u6587\u4ef6\u540d\uff09\uff0c\u7528\u4e8e\u4e4b\u540e\u67e5\u627e\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
       ]
     },
     {
@@ -285,23 +284,16 @@
         "    for root, dirs, files in os.walk(folder_path):\n",
         "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u5b50\u6587\u4ef6\u5939\n",
         "        for folder in dirs:\n",
-        "            # \u83b7\u53d6\u6587\u4ef6\u5939\u8def\u5f84\n",
-        "            folder_path = os.path.join(root, folder).encode('utf-8')\n",
-        "            # \u66f4\u65b0\u54c8\u5e0c\u503c\n",
-        "            checksum.update(folder_path)\n",
+        "            # # \u83b7\u53d6\u6587\u4ef6\u5939\u8def\u5f84\n",
+        "            # folder_path = os.path.join(root, folder).encode('utf-8')\n",
+        "            # \u66f4\u65b0\u6587\u4ef6\u5939\u540d\u54c8\u5e0c\u503c\n",
+        "            checksum.update(folder)\n",
         "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u6587\u4ef6\n",
         "        for file in files:\n",
-        "            # \u83b7\u53d6\u6587\u4ef6\u8def\u5f84\n",
-        "            file_path = os.path.join(root, file)\n",
-        "            # \u6253\u5f00\u6587\u4ef6\n",
-        "            with open(file_path, 'rb') as f:\n",
-        "                # \u8bfb\u53d6\u6587\u4ef6\u5757\n",
-        "                while True:\n",
-        "                    block = f.read(4096)\n",
-        "                    if not block:\n",
-        "                        break\n",
-        "                    # \u66f4\u65b0\u54c8\u5e0c\u503c\n",
-        "                    checksum.update(block)\n",
+        "            # # \u83b7\u53d6\u6587\u4ef6\u8def\u5f84\n",
+        "            # file_path = os.path.join(root, file).encode('utf-8')\n",
+        "            # \u66f4\u65b0\u6587\u4ef6\u540d\u54c8\u5e0c\u503c\n",
+        "            checksum.update(file)\n",
         "    # \u7ed3\u675f\u8ba1\u65f6\n",
         "    elapsed_time = time.time() - start_time\n",
         "    # \u8f93\u51fa\u6240\u7528\u65f6\u95f4\n",
@@ -310,7 +302,7 @@
         "    # \u8fd4\u56de\u5341\u516d\u8fdb\u5236\u54c8\u5e0c\u503c\n",
         "    return checksum.hexdigest()\n",
         "\n",
-        "# \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 8765e1bd86085ab0\n",
+        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 88fa2a2c43bcbe01\n",
         "\n",
         "# # \u8bbe\u7f6e\u8981\u751f\u6210\u6821\u9a8c\u7801\u7684\u6587\u4ef6\u5939\u8def\u5f84\n",
         "# targetFolder='/output/content/stable-diffusion-v2-768'\n",
@@ -346,6 +338,14 @@
         "\n",
         "def find_folder(root_folder, checksum):\n",
         "    start_time = time.time()\n",
+        "    # \u5148\u8ba1\u7b97\u6839\u76ee\u5f55\u7684\u6821\u9a8c\u548c\n",
+        "    root_checksum = generate_checksum(root_folder)\n",
+        "    if root_checksum == checksum:\n",
+        "        elapsed_time = time.time() - start_time\n",
+        "        print(f'\\033[32m\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
+        "        print(f'\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{root_folder}')\n",
+        "        return root_folder\n",
+        "    # \u904d\u5386\u76ee\u5f55\u6811\n",
         "    for root, dirs, files in os.walk(root_folder):\n",
         "        for folder in dirs:\n",
         "            folder_path = os.path.join(root, folder)\n",
@@ -357,7 +357,10 @@
         "                return folder_path\n",
         "    elapsed_time = time.time() - start_time\n",
         "    print(f'\\033[31m\u672a\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
-        "    return None"
+        "    return None\n",
+        "\n",
+        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\n",
+        "# find_folder('/input1', '76f394af510a434a')"
       ]
     },
     {
@@ -365,7 +368,7 @@
       "id": "8ab23d58-33f8-428b-885a-740386e4713c",
       "metadata": {},
       "source": [
-        "# \u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08Symbol Link \u8f6f\u8fde\u63a5\uff09"
+        "# \u81ea\u52a8\u641c\u5bfb\u5e76\u6302\u8f7d\u6570\u636e\u96c6\u548c\u6a21\u578b\uff0c\u6216\u5bf9\u6570\u636e\u96c6\u8fdb\u884c\u89e3\u538b\uff0c\u6216\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08Symbol Link \u8f6f\u8fde\u63a5\uff09"
       ]
     },
     {
@@ -408,9 +411,27 @@
         "env_name=detect_environment()[\"env_name\"]\n",
         "\n",
         "if env_name==\"OpenBayes\":\n",
-        "\n",
+        "    # \u904d\u5386input0~4\uff0c\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u5e76\u8fdb\u884c\u590d\u5236\u64cd\u4f5c\n",
+        "    def check_dependencies_and_make_symbollink():\n",
+        "        # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
+        "        for i in range(5):\n",
+        "            dependencies_dir=find_folder(f'/input{i}','76f394af510a434a')\n",
+        "            if dependencies_dir:\n",
+        "                print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
+        "                break\n",
+        "        if dependencies_dir:\n",
+        "        # !cp -r $dependencies_dir/* /openbayes/home/content/\n",
+        "            for file in os.listdir(dependencies_dir):\n",
+        "                create_symlink(\n",
+        "                    source_path=os.path.join(dependencies_dir,file), # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                    symlink_path='/output/content', # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                    symlink_name=file # \u6a21\u578b\u540d\u79f0\n",
+        "                )\n",
+        "    \n",
+        "    check_dependencies_and_make_symbollink()\n",
+        "    \n",
         "    def check_model_and_make_symbollink():\n",
-        "        stable_diffusion_v2_dir=find_folder('/output/','8765e1bd86085ab0') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        stable_diffusion_v2_dir=find_folder('/output/','88fa2a2c43bcbe01') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
         "        # print(stable_diffusion_v2_dir)\n",
         "        if stable_diffusion_v2_dir:\n",
         "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
