--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -282,16 +282,22 @@
         "    checksum = xxhash.xxh64()\n",
         "    # \u904d\u5386\u6587\u4ef6\u5939\n",
         "    for root, dirs, files in os.walk(folder_path):\n",
+        "        # \u5bf9\u5b50\u6587\u4ef6\u5939\u6309\u7167\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f\n",
+        "        dirs.sort()\n",
         "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u5b50\u6587\u4ef6\u5939\n",
         "        for folder in dirs:\n",
         "            # # \u83b7\u53d6\u6587\u4ef6\u5939\u8def\u5f84\n",
         "            # folder_path = os.path.join(root, folder).encode('utf-8')\n",
+        "            # print(folder)\n",
         "            # \u66f4\u65b0\u6587\u4ef6\u5939\u540d\u54c8\u5e0c\u503c\n",
         "            checksum.update(folder)\n",
+        "        # \u5bf9\u6587\u4ef6\u6309\u7167\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f\n",
+        "        files.sort()\n",
         "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u6587\u4ef6\n",
         "        for file in files:\n",
         "            # # \u83b7\u53d6\u6587\u4ef6\u8def\u5f84\n",
         "            # file_path = os.path.join(root, file).encode('utf-8')\n",
+        "            # print(file)\n",
         "            # \u66f4\u65b0\u6587\u4ef6\u540d\u54c8\u5e0c\u503c\n",
         "            checksum.update(file)\n",
         "    # \u7ed3\u675f\u8ba1\u65f6\n",
@@ -302,10 +308,9 @@
         "    # \u8fd4\u56de\u5341\u516d\u8fdb\u5236\u54c8\u5e0c\u503c\n",
         "    return checksum.hexdigest()\n",
         "\n",
-        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 88fa2a2c43bcbe01\n",
-        "\n",
+        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 5a4cf360872b7e38\n",
         "# # \u8bbe\u7f6e\u8981\u751f\u6210\u6821\u9a8c\u7801\u7684\u6587\u4ef6\u5939\u8def\u5f84\n",
-        "# targetFolder='/output/content/stable-diffusion-v2-768'\n",
+        "# targetFolder='/input1'\n",
         "\n",
         "# # \u8c03\u7528 generate_checksum \u51fd\u6570\u751f\u6210\u6821\u9a8c\u7801\n",
         "# code = generate_checksum(\n",
@@ -342,8 +347,7 @@
         "    root_checksum = generate_checksum(root_folder)\n",
         "    if root_checksum == checksum:\n",
         "        elapsed_time = time.time() - start_time\n",
-        "        print(f'\\033[32m\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
-        "        print(f'\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{root_folder}')\n",
+        "        print(f'\\033[32m\u5728\u76ee\u5f55 {root_folder} \u4e0b\uff0c\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\uff0c\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{root_folder}\\033[0m')\n",
         "        return root_folder\n",
         "    # \u904d\u5386\u76ee\u5f55\u6811\n",
         "    for root, dirs, files in os.walk(root_folder):\n",
@@ -352,15 +356,14 @@
         "            folder_checksum = generate_checksum(folder_path)\n",
         "            if folder_checksum == checksum:\n",
         "                elapsed_time = time.time() - start_time\n",
-        "                print(f'\\033[32m\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
-        "                print(f'\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{folder_path}')\n",
+        "                print(f'\\033[32m\u5728\u76ee\u5f55 {root_folder} \u4e0b\uff0c\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\uff0c\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{folder_path}\\033[0m')\n",
         "                return folder_path\n",
         "    elapsed_time = time.time() - start_time\n",
-        "    print(f'\\033[31m\u672a\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
+        "    print(f'\\033[31m\u5728\u76ee\u5f55 {root_folder} \u4e0b\uff0c\u672a\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
         "    return None\n",
         "\n",
         "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\n",
-        "# find_folder('/input1', '76f394af510a434a')"
+        "# find_folder('/input1', 'c7ee605be833a2d9')"
       ]
     },
     {
@@ -415,7 +418,7 @@
         "    def check_dependencies_and_make_symbollink():\n",
         "        # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
         "        for i in range(5):\n",
-        "            dependencies_dir=find_folder(f'/input{i}','76f394af510a434a')\n",
+        "            dependencies_dir=find_folder(f'/input{i}','c7ee605be833a2d9')\n",
         "            if dependencies_dir:\n",
         "                print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
         "                break\n",
@@ -431,7 +434,7 @@
         "    check_dependencies_and_make_symbollink()\n",
         "    \n",
         "    def check_model_and_make_symbollink():\n",
-        "        stable_diffusion_v2_dir=find_folder('/output/','88fa2a2c43bcbe01') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        stable_diffusion_v2_dir=find_folder('/output/','5a4cf360872b7e38') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
         "        # print(stable_diffusion_v2_dir)\n",
         "        if stable_diffusion_v2_dir:\n",
         "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
