--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -272,34 +272,24 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "import xxhash\n",
+        "import hashlib\n",
         "import time\n",
         "\n",
-        "def generate_checksum(folder_path,print_elapsed_time=False):\n",
+        "def generate_checksum(folder_path, print_elapsed_time=False):\n",
         "    # \u5f00\u59cb\u8ba1\u65f6\n",
         "    start_time = time.time()\n",
-        "    # \u521b\u5efa xxhash \u5bf9\u8c61\n",
-        "    checksum = xxhash.xxh64()\n",
+        "    # \u521b\u5efa sha256 \u54c8\u5e0c\u5bf9\u8c61\n",
+        "    checksum = hashlib.sha256()\n",
         "    # \u904d\u5386\u6587\u4ef6\u5939\n",
-        "    for root, dirs, files in os.walk(folder_path):\n",
-        "        # \u5bf9\u5b50\u6587\u4ef6\u5939\u6309\u7167\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f\n",
-        "        dirs.sort()\n",
-        "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u5b50\u6587\u4ef6\u5939\n",
-        "        for folder in dirs:\n",
-        "            # # \u83b7\u53d6\u6587\u4ef6\u5939\u8def\u5f84\n",
-        "            # folder_path = os.path.join(root, folder).encode('utf-8')\n",
-        "            # print(folder)\n",
-        "            # \u66f4\u65b0\u6587\u4ef6\u5939\u540d\u54c8\u5e0c\u503c\n",
-        "            checksum.update(folder)\n",
-        "        # \u5bf9\u6587\u4ef6\u6309\u7167\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f\n",
-        "        files.sort()\n",
-        "        # \u904d\u5386\u6587\u4ef6\u5939\u5185\u7684\u6587\u4ef6\n",
-        "        for file in files:\n",
-        "            # # \u83b7\u53d6\u6587\u4ef6\u8def\u5f84\n",
-        "            # file_path = os.path.join(root, file).encode('utf-8')\n",
-        "            # print(file)\n",
-        "            # \u66f4\u65b0\u6587\u4ef6\u540d\u54c8\u5e0c\u503c\n",
-        "            checksum.update(file)\n",
+        "    with os.scandir(folder_path) as entries:\n",
+        "        for entry in entries:\n",
+        "            # \u82e5\u4e3a\u5b50\u6587\u4ef6\u5939\uff0c\u5219\u9012\u5f52\u8c03\u7528 generate_checksum()\n",
+        "            if entry.is_dir():\n",
+        "                # \u9012\u5f52\u8c03\u7528 generate_checksum()\n",
+        "                checksum.update(generate_checksum(entry.path).encode())\n",
+        "            # \u82e5\u4e3a\u6587\u4ef6\uff0c\u5219\u66f4\u65b0\u6587\u4ef6\u540d\u54c8\u5e0c\u503c\n",
+        "            else:\n",
+        "                checksum.update(entry.name.encode())\n",
         "    # \u7ed3\u675f\u8ba1\u65f6\n",
         "    elapsed_time = time.time() - start_time\n",
         "    # \u8f93\u51fa\u6240\u7528\u65f6\u95f4\n",
@@ -308,7 +298,7 @@
         "    # \u8fd4\u56de\u5341\u516d\u8fdb\u5236\u54c8\u5e0c\u503c\n",
         "    return checksum.hexdigest()\n",
         "\n",
-        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 5a4cf360872b7e38\n",
+        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 9dafc9ba57054a61cc7d898e89b5fb33c7dc8ab9293609a40eda823793b2808a\n",
         "# # \u8bbe\u7f6e\u8981\u751f\u6210\u6821\u9a8c\u7801\u7684\u6587\u4ef6\u5939\u8def\u5f84\n",
         "# targetFolder='/input1'\n",
         "\n",
@@ -418,7 +408,7 @@
         "    def check_dependencies_and_make_symbollink():\n",
         "        # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
         "        for i in range(5):\n",
-        "            dependencies_dir=find_folder(f'/input{i}','c7ee605be833a2d9')\n",
+        "            dependencies_dir=find_folder(f'/input{i}','737665c3eb4443390bc8173483d4369e2951f28f3a5c87b65d096865eda574b3')\n",
         "            if dependencies_dir:\n",
         "                print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
         "                break\n",
@@ -434,7 +424,7 @@
         "    check_dependencies_and_make_symbollink()\n",
         "    \n",
         "    def check_model_and_make_symbollink():\n",
-        "        stable_diffusion_v2_dir=find_folder('/output/','5a4cf360872b7e38') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        stable_diffusion_v2_dir=find_folder('/output/','9dafc9ba57054a61cc7d898e89b5fb33c7dc8ab9293609a40eda823793b2808a') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
         "        # print(stable_diffusion_v2_dir)\n",
         "        if stable_diffusion_v2_dir:\n",
         "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
